Fix recipecard alignment

--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,7 @@ a {
 }
 
 .recipecard {
-    margin: auto;
-    margin-bottom: 20px;
+    margin: 20px auto;
     padding: 0 20px;
     width: 500px;
     text-align: left;
